# NaoEyeTracking

./: CMakeLists.txt  README.md  findEyeCenter.cpp  findEyeCorner.cpp  findEyeCorner.h  findFunctions.cpp  findFunctions.h  main.cpp  qiproject.xml
build-naorobot/: CMakeCache.txt  Makefile  NaoEyeTracking.cbp  cmake_install.cmake  dependencies.cmake
build-naorobot/sdk/share/qi/: path.conf
